--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pagination-counter",
   "version": "1.0.1",
   "description": "Javascript pagination counter",
+  "readmeFilename": "README.md",
   "main": "pagination.js",
   "scripts": {
     "test": "mocha"
@@ -11,7 +12,7 @@
     "url": "https://github.com/CourseTalk/pagination-counter.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/CourseTalk/pagination-counter/issues"
   },
